--- a/static/templates/newTask.html
+++ b/static/templates/newTask.html
@@ -89,15 +89,6 @@
                     <i class="icon"></i>
                 </div>
     
-                <div class="form-control">
-                    <label for="language">Language</label>
-                    <select id="language" name="language">
-                        <option value="spanish">Spanish</option>
-                        <option value="english">English</option>
-                    </select>
-                    <i class="icon"></i>
-                </div>
-    
                 <button type="submit">Create Profile Task</button>
     
             </form>
@@ -123,7 +114,7 @@
                         <span class="info-icon" data-info='Enter some type of filter, in a general task the specification of at least one of the two filters, tags or keywords must be mandatory.'>
                             <i class='bx bx-info-circle' ></i>
                         </span>
-                    </div>
+                    </div>s
                     <div class="form-control">
                         <div class="input-group">
                             <label for="tags">Tags</label>
@@ -163,9 +154,9 @@
                 </div>
     
                 <div class="form-control">
-                    <label for="language">Language</label>
+                    <label for="language">Region</label>
                     <select id="language" name="language">
-                        <option value="spanish">Spanish</option>
+                        <option value="spanish">Spain</option>
                         <option value="english">English</option>
                     </select>
                     <i class="icon"></i>
