--- a/static/templates/newTask.html
+++ b/static/templates/newTask.html
@@ -114,7 +114,7 @@
                         <span class="info-icon" data-info='Enter some type of filter, in a general task the specification of at least one of the two filters, tags or keywords must be mandatory.'>
                             <i class='bx bx-info-circle' ></i>
                         </span>
-                    </div>s
+                    </div>
                     <div class="form-control">
                         <div class="input-group">
                             <label for="tags">Tags</label>
