--- a/static/templates/TasksView.html
+++ b/static/templates/TasksView.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../static/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Guaita TikTok</title>
 </head>
@@ -53,12 +53,22 @@
     </nav>
     <center><h1>Welcome to your tasks</h1></center>
 
+    {% if deleted %}
+    <div id="successModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2 style="color: green";>Done!</h2>
+            <p>{{ deleted }}</p>
+        </div>
+    </div>
+    {% endif %}
+
     {% if notTask %}
     <h2>Sorry you don't have any tasks yet</h2>
     <div id="successModal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-            <h2 style="color: orange";>Warning!</h2>
+            <h2 style="color: orange;">Warning!</h2>
             <p>{{ notTask }}</p>
             <a class="taskButton" href="/newTask">New Task</a>
         </div>
@@ -69,7 +79,7 @@
     <div id="successModal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-            <h2 style="color: orange";>Information!</h2>
+            <h2 style="color: orange;">Information!</h2>
             <p>{{ notFinished }}</p>
         </div>
     </div>
@@ -79,10 +89,23 @@
     <div id="successModal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-            <h2 style="color: red";>Warning!</h2>
+            <h2 style="color: red;">Warning!</h2>
             <p>{{ stopped }}</p>
         </div>
     </div>
+    {% endif %}
+
+    {% if option %}
+        <!-- Modal de confirmación -->
+        <div id="successModal" class="modal">
+            <div class="modal-content">
+                <span class="close-button">&times;</span>
+                <h2 style="color: red;">Are you sure?</h2>
+                <p>You are going to delete the task {{ task_id['taskName']}}, which started the day {{ task_id['startDate'] }} and ended the day {{ task_id['endDate'] }}</p>
+                <p>This action cannot be undone.</p>
+                <a class="taskDelete" href="{{ url_for('taskDelete', task_id=task_id['_id']) }}">Delete</a>
+            </div>
+        </div>
     {% endif %}
 
     {% if tasks_list %}
@@ -96,9 +119,11 @@
                     <th scope="col">Description</th>
                     <th scope="col">Start Date</th>
                     <th scope="col">End Date</th>
-                    <th scope="col">Language</th>
+                    <th scope="col">Region</th>
                     <th scope="col">Task Type</th>
                     <th scope="col">Review</th>
+                    <th scope="col">Recovered Videos</th>
+                    <th scope="col">Delete</th>
                 </tr>
             </thead>
             <tbody>
@@ -127,9 +152,21 @@
                         <td>{{ task['description'] }}</td>
                         <td>{{ task['startDate'] }}</td>
                         <td>{{ task['endDate'] }}</td>
-                        <td>{{ task['language'] }}</td>
+                        <td>Spain</td>
                         <td>{{ task['taskType'] }}</td>
                         <td><a class="taskReview" href="{{ url_for('taskReview', task_id=task['_id']) }}">Review</a></td>
+                        <td>{{ task['recoveredVideos'] }} /  
+                            {% if task['state'] == 'Finished' %}
+                                {{ task['recoveredVideos'] }}
+                            {% else %}
+                                ?
+                            {% endif %}
+                        </td>
+                        <td>
+                            <a href="{{ url_for('tasksView', task_id=task['_id'], option='delete') }}">
+                                <i class="fas fa-trash-alt" style="color: red;"></i>
+                            </a>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
