--- a/static/templates/taskReview.html
+++ b/static/templates/taskReview.html
@@ -281,12 +281,46 @@
             </div>
         </div>
     {% endif %}
+    <input type="hidden" id="listDays" value="{{ daysDivision }}">
+    <input type="hidden" id="listWeeks" value="{{ weeksDivision }}">
+    <input type="hidden" id="listMonths" value="{{ monthsDivision }}">
+    
+    <div id="dashboard-container" class="container-fluid"></div>
+        <div class="row">  
+            <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+
+            </div>
+            <!-- Parte derecha: gráfico circular -->
+            <div class="col-md-10 d-flex flex-column justify-content-center align-items-center">
+                <div class="card shadow p-4" style="background-color: #e6e0f8; border-radius: 15px; margin-top: 20px; margin-left: 15px; margin-right: 15px;">
+                    <h3 class="text-center text-black mb-4">Videos Time Line</h3>
+                    <div class="chart-container"></div>
+                        <!-- Selector de días, semanas, meses -->
+                        <label for="timeSelector">Select filter:</label>
+                        <select id="timeSelector" width="100" height="50">
+                            <option value="days">Days</option>
+                            <option value="weeks">Weeks</option>
+                            <option value="months">Months</option>
+                        </select>
+
+                        <!-- Canvas para la gráfica -->
+                        <canvas id="timelineChart" width="1200" height="500"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+            </div>
+        </div>  
+    </div>
+
+    
+
     <input type="hidden" id="averagePositive" value="{{ statistics['sentiments']['averagePositive'] }}">
     <input type="hidden" id="averageNegative" value="{{ statistics['sentiments']['averageNegative'] }}">
     <input type="hidden" id="averageNeutral" value="{{ statistics['sentiments']['averageNeutral'] }}">
     <input type="hidden" id="averageNone" value="{{ statistics['sentiments']['averageNone'] }}">
 
-    <div class="card shadow p-4" style="background-color: #e6e0f8;; border-radius: 15px; margin-top: 20px; margin-left: 15px; margin-right: 15px; min-height: 600px; height: auto">
+    <div class="card shadow p-4" style="background-color: #e6e0f8; border-radius: 15px; margin-top: 20px; margin-left: 15px; margin-right: 15px; min-height: 600px; height: auto">
         <h3 class="text-center text-black mb-4">Sentiments Statistics</h3>
         <div id="dashboard-container" class="container-fluid" style="margin-bottom: 400px;">
             <div class="row">
@@ -591,6 +625,26 @@
         </div>
     </div>
 
+    <div id="dashboard-container" class="container-fluid"></div>
+        <div class="row">  
+            <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
+    
+            </div>
+            <!-- Parte derecha: gráfico circular -->
+            <div class="col-md-8 d-flex flex-column justify-content-center align-items-center">
+                <div class="card shadow p-6" style="background-color: #e6e0f8; border-radius: 15px; margin-top: 20px; margin-left: 15px; margin-right: 15px;">
+                    <h4 class="text-center text-black mb-4"><strong>Other Stadistics</strong></h4>
+                    <!-- Parte izquierda: tabla de datos -->
+                    <div class="w-100 d-flex justify-content-center align-items-center">
+                        <canvas id="myLineChart" width="900" height="500"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
+            </div>
+        </div>  
+    </div>
+
     {% if notVideoList %}
     <div id="successModal" class="modal">
         <div class="modal-content">
@@ -607,5 +661,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="{{ url_for('static', filename='scripts/canvas.js') }}"></script> 
 
-
+<script>
+    
+</script>
 </html>
